# solombot

./: .gitignore  Dockerfile  README.md  arm-template.json  azure-pipelines.yml  bot.py  env.template  pyproject.toml
.github/workflows/: buildAndPublish.yml  docker.yml  merge-schedule.yml
src/: bot-runner.py
src/solombot/: __main__.py  api.py  bot.py
