[tool.poetry]
name = "solombot"
version = "0.1.0"
description = ""
authors = ["Audun L Solemdal <audunlsolemdal@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
appsettings = "^0.8"
"discord.py" = "^1.3.1"
flask = "^1.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
